// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`font renders 0 1`] = `
Array [
  .c0 {
  font: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`font renders function 1`] = `
Array [
  .c0 {
  font: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font: has;
}

<div
    className="c0"
  />,
  .c0 {
  font: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font: has;
}

<div
    className="c0"
  />,
]
`;

exports[`font renders invalid theme path 1`] = `
Array [
  .c0 {
  font: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`font renders negative number 1`] = `
Array [
  .c0 {
  font: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`font renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`font renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font: July;
  }
}

@media April {
  .c0 {
    font: August;
  }
}

@media January {
  .c0 {
    font: September;
  }
}

@media April {
  .c0 {
    font: November;
  }
}

@media June {
  .c0 {
    font: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font: July;
  }
}

@media April {
  .c0 {
    font: August;
  }
}

@media January {
  .c0 {
    font: September;
  }
}

@media April {
  .c0 {
    font: November;
  }
}

@media June {
  .c0 {
    font: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font: January;
  }
}

@media April {
  .c0 {
    font: December;
  }
}

@media January {
  .c0 {
    font: April;
  }
}

@media April {
  .c0 {
    font: May;
  }
}

@media June {
  .c0 {
    font: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font: January;
  }
}

@media April {
  .c0 {
    font: December;
  }
}

@media January {
  .c0 {
    font: April;
  }
}

@media April {
  .c0 {
    font: May;
  }
}

@media June {
  .c0 {
    font: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`font renders postitive number 1`] = `
Array [
  .c0 {
  font: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`font renders string 1`] = `
Array [
  .c0 {
  font: July;
}

<div
    className="c0"
  />,
  .c0 {
  font: July;
}

<div
    className="c0"
  />,
  .c0 {
  font: June;
}

<div
    className="c0"
  />,
  .c0 {
  font: June;
}

<div
    className="c0"
  />,
]
`;

exports[`font renders valid theme path 1`] = `
Array [
  .c0 {
  font: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
